# ae_semantic_navigation

./: README.md  pyproject.toml
src/ae_semantic_navigation/: __init__.py  semantic_navigation_client.py  semantic_navigation_server.py
src/ae_semantic_navigation/modules/: __init__.py  llm_decisions.py  path_comparator.py  yolo_obj_detector.py
